--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   testAction:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: octokit/graphql-action@v2.3.2
         id: get_versions
