--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,7 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v4
     - name: Check Version
       id: check-version
       shell: bash
